# gmail-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/gmail_reader/: __init__.py  __main__.py  auth.py  client.py  config.py  mcp_server.py  queries.py  reports.py
tests/: test_config.py  test_read_only_guardrail.py  test_secret_leak.py
